[WPE][GTK] Sleep inhibitors do not work under Flatpak https://bugs.webkit.org/show_bug.cgi?id=180812

Reviewed by Carlos Garcia Campos.

Ensure SleepDisablerGLib works even when running inside a Flatpak sandbox by using the
Freedesktop inhibit portal D-Bus API.

Unfortunately this has to be tested manually.

* pal/system/glib/SleepDisablerGLib.cpp:
(PAL::SleepDisablerGLib::SleepDisablerGLib):
(PAL::SleepDisablerGLib::~SleepDisablerGLib):
(PAL::SleepDisablerGLib::acquireInhibitor):
(PAL::SleepDisablerGLib::acquireInhibitorViaScreenSaverProxy):
(PAL::SleepDisablerGLib::acquireInhibitorViaInhibitPortalProxy):
(PAL::SleepDisablerGLib::releaseInhibitor):
(PAL::SleepDisablerGLib::releaseInhibitorViaScreenSaverProxy):
(PAL::SleepDisablerGLib::releaseInhibitorViaInhibitPortalProxy):


Canonical link: https://commits.webkit.org/197815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227415 268f45cc-cd09-0410-ab3c-d52691b4dbfc